force-app/main/default/objects/Application__c/fields/Geo_City__c.field-meta.xml
<CustomField>
    <fullName>Geo_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Geo City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>