force-app/main/default/objects/Application__c/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Geo Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>