force-app/main/default/objects/Application__c/fields/Geo_Province__c.field-meta.xml
<CustomField>
    <fullName>Geo_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Geo  Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>