force-app/main/default/objects/Application__c/fields/Has_Application_Verification_Expired__c.field-meta.xml
<CustomField>
    <fullName>Has_Application_Verification_Expired__c</fullName>
    <description>Checks if Application Verification is Expired and Application was not verified</description>
    <formula>IF(  NOT(ISPICKVAL(Verification_Status__c  , &quot;Verified&quot;)) &amp;&amp;   (NOW() &gt;  Verification_Expiration_Date__c )  ,
 true, false)</formula>
    <inlineHelpText>Checks if Application Verification is Expired and Application was not verified</inlineHelpText>
    <label>Has Application Verification Expired</label>
    <type>Checkbox</type>
</CustomField>