force-app/main/default/objects/Application__c/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <label>How Did You Hear About Us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Financial Advisor/Consultant</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Online Ad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>