force-app/main/default/objects/Application__c/fields/How_Heard_of_Fidem__c.field-meta.xml
<CustomField>
    <fullName>How_Heard_of_Fidem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How Heard of Fidem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>