force-app/main/default/objects/Application__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>List of Industry for employment</description>
    <inlineHelpText>List of Industry for employment</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative or Clerical</fullName>
            </value>
            <value>
                <fullName>Business or Strategic Management</fullName>
            </value>
            <value>
                <fullName>Construction or Skilled Trades</fullName>
            </value>
            <value>
                <fullName>Creative or Design</fullName>
            </value>
            <value>
                <fullName>Customer Support or Client Care</fullName>
            </value>
            <value>
                <fullName>Editorial or Writing</fullName>
            </value>
            <value>
                <fullName>Education or Training</fullName>
            </value>
            <value>
                <fullName>Engineering or Architecture</fullName>
            </value>
            <value>
                <fullName>Finance or Insurance</fullName>
            </value>
            <value>
                <fullName>Food Services or Hospitality</fullName>
            </value>
            <value>
                <fullName>Installation or Maintenance or Repair</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Logistics or Transportation</fullName>
            </value>
            <value>
                <fullName>Manufacture or Production or Operations</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Medical or Health</fullName>
            </value>
            <value>
                <fullName>Project or Program Management</fullName>
            </value>
            <value>
                <fullName>Quality Assurance or Safety</fullName>
            </value>
            <value>
                <fullName>Retail Sales or Business Development</fullName>
            </value>
            <value>
                <fullName>Security or Protective Services</fullName>
            </value>
            <value>
                <fullName>Science or Research and Design</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>