force-app/main/default/objects/Application__c/fields/initial_application_status__c.field-meta.xml
<CustomField>
    <fullName>initial_application_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Application Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>