force-app/main/default/objects/Application__c/fields/initial_decision__c.field-meta.xml
<CustomField>
    <fullName>initial_decision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Decision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>