force-app/main/default/objects/Application__c/fields/Insolvency_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insolvency Date</label>
    <type>Date</type>
</CustomField>