force-app/main/default/objects/Application__c/fields/Interest_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interest Rate Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>