force-app/main/default/objects/Application__c/fields/Is_Sole_Applicant_for_Card__c.field-meta.xml
<CustomField>
    <fullName>Is_Sole_Applicant_for_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I confirm that I am the sole applicant for this card and there is no person or entity that will give direction on this account.</description>
    <inlineHelpText>I confirm that I am the sole applicant for this card and there is no person or entity that will give direction on this account.</inlineHelpText>
    <label>Is Sole Applicant for Card</label>
    <type>Checkbox</type>
</CustomField>