force-app/main/default/objects/Application__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Values depending upon Industry</description>
    <inlineHelpText>Values depending upon Industry</inlineHelpText>
    <label>Job Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accounting Consultant</fullName>
            </value>
            <value>
                <fullName>Account Management Commissioned</fullName>
            </value>
            <value>
                <fullName>Account Management Salaried</fullName>
            </value>
            <value>
                <fullName>Accounts Payable or Receivable</fullName>
            </value>
            <value>
                <fullName>Actuarial Analysis</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Administrative Support</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Aeronautic or Avionic Engineering</fullName>
            </value>
            <value>
                <fullName>Agricultural Specialist</fullName>
            </value>
            <value>
                <fullName>Airport Security and Screening</fullName>
            </value>
            <value>
                <fullName>Air Traffic Controller</fullName>
            </value>
            <value>
                <fullName>Alternative Medicine</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Artist</fullName>
            </value>
            <value>
                <fullName>Assembly or Assembly Line</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Bank Manager</fullName>
            </value>
            <value>
                <fullName>Bank Teller</fullName>
            </value>
            <value>
                <fullName>Bartender</fullName>
            </value>
            <value>
                <fullName>BioEngineering</fullName>
            </value>
            <value>
                <fullName>Blacksmith</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Brand or Product Marketing</fullName>
            </value>
            <value>
                <fullName>Broadcasting and Post Production</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Budget Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>