force-app/main/default/objects/Application__c/fields/Lender_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lender_Approved_Amount__c</fullName>
    <label>Lender Approved Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>