force-app/main/default/objects/Application__c/fields/Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>