force-app/main/default/objects/Application__c/fields/Loan_TeleScripting_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Loan_TeleScripting_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan TeleScripting Accepted</label>
    <type>Checkbox</type>
</CustomField>