force-app/main/default/objects/Application__c/fields/Loan_TeleScripting_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_TeleScripting_Accepted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan TeleScripting Accepted Date</label>
    <type>DateTime</type>
</CustomField>