force-app/main/default/objects/Application__c/fields/Loan_TeleScripting_Recording_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_TeleScripting_Recording_Number__c</fullName>
    <description>recording number of the conversation with the customer accepting the telescript</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan TeleScripting Recording Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>