force-app/main/default/objects/Application__c/fields/Marketing_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Consent Date</label>
    <type>Date</type>
</CustomField>