force-app/main/default/objects/Application__c/fields/Max_Credit_Card_Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Credit_Card_Allowed_Amount__c</fullName>
    <inlineHelpText>Max allowed amount returned from PCoD</inlineHelpText>
    <label>Max Credit Card Allowed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>