force-app/main/default/objects/Application__c/fields/Megasys_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Megasys_Loan_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Megasys Loan Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>