force-app/main/default/objects/Application__c/fields/Mortgage_With__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_With__c</fullName>
    <description>Who is your loan mortgage with?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Who is your loan mortgage with?</inlineHelpText>
    <label>Mortgage With</label>
    <length>50</length>
    <type>Text</type>
</CustomField>