force-app/main/default/objects/Application__c/fields/Name_of_Jurisdictions__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Jurisdictions__c</fullName>
    <description>list which other jurisdictions you have tax obligations in</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>list which other jurisdictions you have tax obligations in</inlineHelpText>
    <label>Name of Jurisdictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>