force-app/main/default/objects/Application__c/fields/Occupation_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Dropdown__c</fullName>
    <description>New field for Occupation drop down values</description>
    <inlineHelpText>Occupation of the customer</inlineHelpText>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Professor</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>