force-app/main/default/objects/Application__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Origination</label>
    <length>80</length>
    <type>Text</type>
</CustomField>