force-app/main/default/objects/Application__c/fields/Origination_Insolvency_Type__c.field-meta.xml
<CustomField>
    <fullName>Origination_Insolvency_Type__c</fullName>
    <description>Field used to store Origination Insolvency Type values</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field used to store Origination Insolvency Type values</inlineHelpText>
    <label>Origination Insolvency Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>