force-app/main/default/objects/Application__c/fields/Origination_Partner__c.field-meta.xml
<CustomField>
    <fullName>Origination_Partner__c</fullName>
    <description>Origination Partner value is stored</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Origination Partner value is stored</inlineHelpText>
    <label>Origination Partner</label>
    <length>150</length>
    <type>Text</type>
</CustomField>