force-app/main/default/objects/Application__c/fields/Origination_Source__c.field-meta.xml
<CustomField>
    <fullName>Origination_Source__c</fullName>
    <description>Origination Source value is stored</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Origination Source value is stored</inlineHelpText>
    <label>Origination Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>