force-app/main/default/objects/Application__c/fields/Origination_Type__c.field-meta.xml
<CustomField>
    <fullName>Origination_Type__c</fullName>
    <description>Origination Type value is stored</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Origination Type value is stored</inlineHelpText>
    <label>Origination Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>