force-app/main/default/objects/Application__c/fields/PAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PAP_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAP Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>