force-app/main/default/objects/Application__c/fields/PAP_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>PAP_Bank_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAP Bank Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>