force-app/main/default/objects/Application__c/fields/PAP_Information_I_Accept_DateTime__c.field-meta.xml
<CustomField>
    <fullName>PAP_Information_I_Accept_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAP Information Accepted Date</label>
    <type>DateTime</type>
</CustomField>