force-app/main/default/objects/Application__c/fields/PAP_Transit_Code__c.field-meta.xml
<CustomField>
    <fullName>PAP_Transit_Code__c</fullName>
    <description>Also known as MICR code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PAP Transit Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>