force-app/main/default/objects/Application__c/fields/Parent_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Page URL</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>