force-app/main/default/objects/Application__c/fields/Past_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Past_Bankruptcy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Past Bankruptcy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>