force-app/main/default/objects/Application__c/fields/Payday_Loans__c.field-meta.xml
<CustomField>
    <fullName>Payday_Loans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payday Loans</label>
    <length>100</length>
    <type>Text</type>
</CustomField>