force-app/main/default/objects/Application__c/fields/PcoD_Bankruptcy_State__c.field-meta.xml
<CustomField>
    <fullName>PcoD_Bankruptcy_State__c</fullName>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>BKCP Not Discharged</fullName>
            </value>
            <value>
                <fullName>BKCP Discharged &lt; 1 Year</fullName>
            </value>
            <value>
                <fullName>BKCP Discharged &gt;= 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>