force-app/main/default/objects/Application__c/fields/PEFP_Where_Held__c.field-meta.xml
<CustomField>
    <fullName>PEFP_Where_Held__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEFP Where Held</label>
    <length>100</length>
    <type>Text</type>
</CustomField>