force-app/main/default/objects/Application__c/fields/PEFP_Who_Held_Position__c.field-meta.xml
<CustomField>
    <fullName>PEFP_Who_Held_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEFP Who Held Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>