force-app/main/default/objects/Application__c/fields/Permanent_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permanent Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>