force-app/main/default/objects/Application__c/fields/Permanent_Address_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_PO_Box__c</fullName>
    <description>Permanent Address PO Box</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Permanent Address PO Box</inlineHelpText>
    <label>Permanent Address PO Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>