force-app/main/default/objects/Application__c/fields/Permanent_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permanent Address PostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>