force-app/main/default/objects/Application__c/fields/Permanent_Address_Province__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Province__c</fullName>
    <label>Permanent Address Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
            <value>
                <fullName>YT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>