force-app/main/default/objects/Application__c/fields/Permanent_Address_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Street_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permanent Address Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>