force-app/main/default/objects/Application__c/fields/Permanent_Address_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Unit_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permanent Address Unit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>