force-app/main/default/objects/Application__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>PreferredLanguage</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PreferredLanguage</inlineHelpText>
    <label>Preferred Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>