force-app/main/default/objects/Application__c/fields/Previous_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>