force-app/main/default/objects/Application__c/fields/Previous_Address_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_PO_Box__c</fullName>
    <description>Previous Address PO Box</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Previous Address PO Box</inlineHelpText>
    <label>Previous Address PO Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>