force-app/main/default/objects/Application__c/fields/Previous_Address_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_Street_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Address Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>