force-app/main/default/objects/Application__c/fields/Previous_Address_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_Street_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Address Street Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>