force-app/main/default/objects/Application__c/fields/Previous_Address_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Address_Unit_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Address Unit Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>