force-app/main/default/objects/Application__c/fields/Previous_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>