force-app/main/default/objects/Application__c/fields/Previous_Employer_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_PO_Box__c</fullName>
    <description>Previous Employer PO Box</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Previous Employer PO Box</inlineHelpText>
    <label>Previous Employer PO Box</label>
    <length>10</length>
    <type>Text</type>
</CustomField>