force-app/main/default/objects/Application__c/fields/Previous_Employer_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>